airflow/airflow-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: airflow
  labels:
    app: airflow
    component: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
      component: scheduler
  template:
    metadata:
      labels:
        app: airflow
        component: scheduler
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3swrk2
      containers:
      - name: scheduler
        image: apache/airflow:2.9.3
        command: ["airflow", "scheduler"]
        volumeMounts:
        - name: config
          mountPath: /opt/airflow/airflow.cfg
          subPath: airflow.cfg
        - name: logs
          mountPath: /airflow/logs
        - name: dags
          mountPath: /opt/airflow/dags
        resources:
          limits:
            cpu: "400m"
            memory: "700Mi"
          requests:
            cpu: "100m"
            memory: "384Mi"
      volumes:
      - name: config
        configMap:
          name: airflow-config
      - name: logs
        persistentVolumeClaim:
          claimName: airflow-logs
      - name: dags
        persistentVolumeClaim:
          claimName: airflow-dags
      tolerations:
      - key: "low-memory"
        operator: "Exists"
        effect: "NoSchedule"
