airflow/airflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.8
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: airflow
    component: webserver
